--- a/src/ar/edu/unlu/poo/burako/vista/consola/VistaConsola.form
+++ b/src/ar/edu/unlu/poo/burako/vista/consola/VistaConsola.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ar.edu.unlu.poo.burako.vista.VistaConsola">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ar.edu.unlu.poo.burako.vista.consola.VistaConsola">
   <grid id="27dc6" binding="frmPrincipal" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -8,6 +8,7 @@
     <properties>
       <background color="-14605013"/>
       <minimumSize width="800" height="500"/>
+      <preferredSize width="725" height="477"/>
     </properties>
     <border type="empty">
       <size top="5" left="5" bottom="5" right="5"/>
@@ -30,6 +31,7 @@
             <properties>
               <autoscrolls value="true"/>
               <background color="-14605013"/>
+              <editable value="false"/>
               <font name="Monospaced" size="14" style="1"/>
               <foreground color="-3947332"/>
               <inheritsPopupMenu value="false"/>
