Add componentes visuales

--- a/src/ar/edu/unlu/poo/burako/vista/grafica/VistaGrafica.form
+++ b/src/ar/edu/unlu/poo/burako/vista/grafica/VistaGrafica.form
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ar.edu.unlu.poo.burako.vista.grafica.VistaGrafica">
-  <grid id="27dc6" binding="pnlMain" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="pnlMain" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
@@ -12,11 +11,7 @@
     <border type="none"/>
     <children>
       <tabbedpane id="f96cc" binding="tabPartida">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="200" height="200"/>
-          </grid>
-        </constraints>
+        <constraints border-constraint="Center"/>
         <properties>
           <background color="-14605013"/>
         </properties>
@@ -45,12 +40,24 @@
                       <text value="Label"/>
                     </properties>
                   </component>
-                  <component id="4a6b" class="javax.swing.JList" binding="lstNorth">
+                  <scrollpane id="f51eb" binding="scpNorth">
                     <constraints border-constraint="Center"/>
                     <properties>
-                      <background color="-14605013"/>
+                      <horizontalScrollBarPolicy value="30"/>
+                      <preferredSize width="0" height="0"/>
+                      <verticalScrollBarPolicy value="21"/>
                     </properties>
-                  </component>
+                    <border type="none"/>
+                    <children>
+                      <component id="4a6b" class="javax.swing.JList" binding="lstNorth">
+                        <constraints/>
+                        <properties>
+                          <background color="-14605013"/>
+                          <layoutOrientation value="2"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </scrollpane>
                 </children>
               </grid>
               <grid id="2a3b7" binding="pnlWest" layout-manager="BorderLayout" hgap="0" vgap="0">
@@ -66,12 +73,23 @@
                       <text value="Label"/>
                     </properties>
                   </component>
-                  <component id="44733" class="javax.swing.JList" binding="lstWest">
+                  <scrollpane id="2d201" binding="scpWest">
                     <constraints border-constraint="Center"/>
                     <properties>
-                      <background color="-14605013"/>
+                      <horizontalScrollBarPolicy value="31"/>
+                      <preferredSize width="0" height="0"/>
                     </properties>
-                  </component>
+                    <border type="none"/>
+                    <children>
+                      <component id="44733" class="javax.swing.JList" binding="lstWest">
+                        <constraints/>
+                        <properties>
+                          <background color="-14605013"/>
+                          <layoutOrientation value="0"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </scrollpane>
                 </children>
               </grid>
               <grid id="b6fa0" binding="pnlEast" layout-manager="BorderLayout" hgap="0" vgap="0">
@@ -88,12 +106,22 @@
                       <text value="Label"/>
                     </properties>
                   </component>
-                  <component id="618ef" class="javax.swing.JList" binding="lstEast">
+                  <scrollpane id="23cf6" binding="scpEast">
                     <constraints border-constraint="Center"/>
                     <properties>
-                      <background color="-14605013"/>
+                      <horizontalScrollBarPolicy value="31"/>
+                      <preferredSize width="0" height="0"/>
                     </properties>
-                  </component>
+                    <border type="none"/>
+                    <children>
+                      <component id="618ef" class="javax.swing.JList" binding="lstEast">
+                        <constraints/>
+                        <properties>
+                          <background color="-14605013"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </scrollpane>
                 </children>
               </grid>
               <grid id="f59d1" binding="pnlSouth" layout-manager="BorderLayout" hgap="0" vgap="0">
@@ -109,14 +137,23 @@
                       <text value="Label"/>
                     </properties>
                   </component>
-                  <component id="6e9c3" class="javax.swing.JList" binding="lstSouth">
+                  <scrollpane id="2f078" binding="scpSouth">
                     <constraints border-constraint="Center"/>
                     <properties>
-                      <background color="-14605013"/>
-                      <focusTraversalPolicyProvider value="false"/>
-                      <layoutOrientation value="2"/>
+                      <verticalScrollBarPolicy value="21"/>
                     </properties>
-                  </component>
+                    <border type="none"/>
+                    <children>
+                      <component id="6e9c3" class="javax.swing.JList" binding="lstSouth">
+                        <constraints/>
+                        <properties>
+                          <background color="-14605013"/>
+                          <focusTraversalPolicyProvider value="false"/>
+                          <layoutOrientation value="2"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </scrollpane>
                 </children>
               </grid>
               <grid id="1bdad" binding="pnlCenter" layout-manager="BorderLayout" hgap="0" vgap="0">
@@ -131,6 +168,102 @@
           </grid>
         </children>
       </tabbedpane>
+      <grid id="7d907" class="javax.swing.JMenuBar" binding="mnbMenu" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
+        <constraints border-constraint="North"/>
+        <properties>
+          <preferredSize width="61" height="20"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <grid id="1d94b" class="javax.swing.JMenu" binding="mnuPartida" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+            <constraints/>
+            <properties>
+              <preferredSize width="51" height="14"/>
+              <text value="Partida"/>
+              <verticalAlignment value="3"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="97bf0" class="javax.swing.JMenuItem" binding="mniAbandonarPartida">
+                <constraints/>
+                <properties>
+                  <text value="Abandonar Partida"/>
+                </properties>
+              </component>
+              <component id="21cbd" class="javax.swing.JMenuItem" binding="mniSalir">
+                <constraints/>
+                <properties>
+                  <text value="Salir"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="57c84" class="javax.swing.JMenu" binding="mnuOpciones" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+            <constraints/>
+            <properties>
+              <preferredSize width="67" height="14"/>
+              <text value="Opciones"/>
+              <verticalAlignment value="3"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="47c99" class="javax.swing.JMenuItem" binding="mniFondo">
+                <constraints/>
+                <properties>
+                  <text value="Cambiar Fondo"/>
+                </properties>
+              </component>
+              <component id="b511" class="javax.swing.JMenuItem" binding="mniPanelTexto">
+                <constraints/>
+                <properties>
+                  <text value="Mostrar Panel Registro"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="a8c31" class="javax.swing.JMenu" binding="mnuAyuda" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+            <constraints/>
+            <properties>
+              <preferredSize width="47" height="14"/>
+              <text value="Ayuda"/>
+              <verticalAlignment value="3"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="4bfc8" class="javax.swing.JMenuItem" binding="mniReglas">
+                <constraints/>
+                <properties>
+                  <text value="Reglas de Juego"/>
+                </properties>
+              </component>
+              <component id="5de90" class="javax.swing.JMenuItem" binding="mniAcercaDe">
+                <constraints/>
+                <properties>
+                  <text value="Acerca de..."/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+        </children>
+      </grid>
+      <scrollpane id="fd116" binding="scpRegistro">
+        <constraints border-constraint="East"/>
+        <properties>
+          <horizontalScrollBarPolicy value="31"/>
+          <preferredSize width="100" height="23"/>
+          <verticalScrollBarPolicy value="20"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="e4d6f" class="javax.swing.JTextPane" binding="txpRegistro">
+            <constraints/>
+            <properties>
+              <background color="-14605013"/>
+              <foreground color="-14605013"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
