--- a/src/ar/edu/unlu/poo/burako/vista/grafica/VistaGrafica.form
+++ b/src/ar/edu/unlu/poo/burako/vista/grafica/VistaGrafica.form
@@ -132,9 +132,9 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="73f5c" binding="pnlPartida" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="73f5c" binding="pnlCardPartida" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
-              <card name="Card2"/>
+              <card name="Card3"/>
             </constraints>
             <properties>
               <background color="-14605013"/>
@@ -281,9 +281,9 @@
               </grid>
             </children>
           </grid>
-          <grid id="cca97" binding="pnlMenuPrincipal" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="cca97" binding="pnlCardMenuPrincipal" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
-              <card name="Card1"/>
+              <card name="Card2"/>
             </constraints>
             <properties>
               <background color="-14605013"/>
@@ -353,8 +353,102 @@
               </grid>
             </children>
           </grid>
+          <grid id="6a1e7" binding="pnlCardJugador" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints>
+              <card name="Card1"/>
+            </constraints>
+            <properties>
+              <background color="-14605013"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <grid id="b342c" binding="pnlJugadorCenter" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <background color="-14605013"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="4375" class="javax.swing.JLabel" binding="lblBienvenida">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <foreground color="-5524801"/>
+                      <text value="¡¡Bienvenido a Burako! El clásico juego de mesa"/>
+                    </properties>
+                  </component>
+                  <vspacer id="be6b1">
+                    <constraints>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </vspacer>
+                  <component id="898b0" class="javax.swing.JTextField" binding="txtNombreJugador">
+                    <constraints>
+                      <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <background color="-14144460"/>
+                      <foreground color="-6248524"/>
+                      <text value="Pepe"/>
+                    </properties>
+                  </component>
+                  <component id="2a53b" class="javax.swing.JButton" binding="btnAceptarJugador">
+                    <constraints>
+                      <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-12762549"/>
+                      <foreground color="-6248524"/>
+                      <text value="Aceptar"/>
+                    </properties>
+                  </component>
+                  <vspacer id="540b9">
+                    <constraints>
+                      <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </vspacer>
+                  <component id="43b1f" class="javax.swing.JLabel" binding="lblNombreJugador">
+                    <constraints>
+                      <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <foreground color="-5524801"/>
+                      <text value="Ingrese su nombre:"/>
+                    </properties>
+                  </component>
+                  <hspacer id="9f100">
+                    <constraints>
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </hspacer>
+                  <hspacer id="964cf">
+                    <constraints>
+                      <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </hspacer>
+                  <vspacer id="b9b4d">
+                    <constraints>
+                      <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </vspacer>
+                </children>
+              </grid>
+            </children>
+          </grid>
         </children>
       </grid>
+      <component id="3e044" class="javax.swing.JLabel" binding="lblMensajes">
+        <constraints border-constraint="South"/>
+        <properties>
+          <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="0"/>
+          <text value="Label"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
